# FFNx

./: .appveyor.yml  .editorconfig  .gitignore  .vsconfig  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Changelog.md  LICENSE  README.md  cmake-format.yaml  vcpkg-configuration.json  vcpkg.json
.ci/: alert.ps1  azure.yml  build.ps1
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: alert.ps1  build.ps1  codeql-analysis.yml  main-1.18.0.yml  main-1.18.1.yml  main-1.19.0.yml  main-1.19.1.yml  main-1.20.0.yml  main-1.20.1.yml  main-1.20.2.yml  main-1.20.3.yml  main-1.21.0.yml  main-1.21.1.yml  main-1.21.2.yml  main-1.21.3.yml  main-1.22.0.yml  main-1.23.0.yml  main-1.24.0.yml  main-1.24.1.yml  main-1.24.2.yml  main-1.24.3.yml  main.yml
.vcpkg/ports/bgfx/: FindBGFX.cmake.in  portfile.cmake  usage  vcpkg-cmake-wrapper.cmake  vcpkg.json
.vcpkg/ports/bimg/: FindBIMG.cmake.in  portfile.cmake  usage  vcpkg-cmake-wrapper.cmake  vcpkg.json
.vcpkg/ports/bx/: FindBX.cmake.in  portfile.cmake  usage  vcpkg-cmake-wrapper.cmake  vcpkg.json
.vcpkg/ports/hwinfo/: hwinfoConfig.cmake.in  portfile.cmake  usage  vcpkg.json
.vcpkg/ports/openpsf/: FindOPENPSF.cmake.in  portfile.cmake  usage  vcpkg-cmake-wrapper.cmake  vcpkg.json
.vcpkg/ports/soloud/: FindSOLOUD.cmake.in  portfile.cmake  usage  vcpkg-cmake-wrapper.cmake  vcpkg.json
.vcpkg/ports/stackwalker/: FindSTACKWALKER.cmake.in  portfile.cmake  usage  vcpkg-cmake-wrapper.cmake  vcpkg.json
.vcpkg/ports/steamworkssdk/: STEAMWORKSSDKConfig.cmake.in  portfile.cmake  usage  vcpkg.json
.vcpkg/ports/tomlplusplus/: portfile.cmake  vcpkg.json
.vcpkg/ports/vgmstream/: FindVGMSTREAM.cmake.in  cmake.patch  portfile.cmake  usage  (+2 more)
.vcpkg/triplets/: x86-windows-static.cmake
.vcpkg/versions/: baseline.json
choco/: main.cpp
cmake/: FindBGFX.cmake  FindCONFUSE.cmake  FindFFMPEG.cmake  FindIMGUI.cmake  FindLIBPNG.cmake  FindOGG.cmake  FindOPENPSF.cmake  FindOPUS.cmake  FindPNG.cmake  FindPUGIXML.cmake  FindSOLOUD.cmake  FindSPEEX.cmake  FindSTACKWALKER.cmake  FindTHEORA.cmake  FindVGMSTREAM.cmake  FindVORBIS.cmake  FindVPX.cmake  FindWAVPACK.cmake  FindX264.cmake  FindX265.cmake  FindZLib.cmake
docs/: Doxyfile  build.md  color_modes.md  contrib.md  faq.md  gamma_and_gamut.md  how_to_install.md  index.md  mainpage.md  readme.md  shortcuts.md
docs/ff8/: index.md  readme.md  vram.md
docs/mods/: audio_engine.md  devtools.md  direct_mode.md  exe_data.md  external_textures.md  preparing_textures_for_ntscj_mode.md  unbink.vpy  video_encoding_guide.md
misc/: FF7.reg  FF8.reg  FFNX.overlay.frag  FFNX.overlay.vert  FFNx-Choco.def  FFNx-Remastered-Proxy.def  FFNx.SFX.toml  FFNx.ambient.toml  FFNx.blit.frag  FFNx.blit.vert  FFNx.cfg  FFNx.colorfunctions.sh  FFNx.common.sh  FFNx.def  FFNx.dither.sh  FFNx.field.shadow.frag  FFNx.field.shadow.vert  FFNx.frag  FFNx.lighting.frag  FFNx.lighting.sh  FFNx.lighting.toml  FFNx.lighting.vert  FFNx.moviefunctions.sh  FFNx.music.toml  FFNx.overlay.frag  FFNx.overlay.vert  FFNx.pcf.sh  FFNx.post.frag  FFNx.post.ntscj.frag  FFNx.post.ntscj.vert  FFNx.post.vert  FFNx.reg  FFNx.shadowmap.frag  FFNx.shadowmap.vert  FFNx.time.toml  FFNx.toml  FFNx.varying.def.sc  FFNx.varying.flat.def.sc  FFNx.varying.smooth.def.sc  FFNx.vert  (+9 more)
remastered-proxy/: main.cpp
src/: CMakeLists.txt  achievement.cpp  achievement.h  api.cpp  api.h  audio.cpp  audio.h  bgfx.cpp  bgfx.h  cfg.cpp  cfg.h  common.cpp  common.h  common_imports.h  compile_cfg.h  crashdump.cpp  crashdump.h  directmusic.h  discohash.cpp  exe_data.cpp  exe_data.h  external_mesh.cpp  external_mesh.h  externals_102_de.h  externals_102_fr.h  externals_102_sp.h  externals_102_us.h  fake_dd.cpp  fake_dd.h  ff7.h  ff7_data.h  ff7_opengl.cpp  ff8.h  ff8_data.cpp  ff8_data.h  ff8_opengl.cpp  field.cpp  field.h  game_cfg.cpp  game_cfg.h  (+60 more)
src/audio/memorystream/: memorystream.cpp  memorystream.h
src/audio/openpsf/: openpsf.cpp  openpsf.h  openpsf_plugin.cpp  openpsf_plugin.h
src/audio/openpsf/include/: openpsf.h
src/audio/vgmstream/: vgmstream.cpp  vgmstream.h  zzzstreamfile.cpp  zzzstreamfile.h
src/audio/winamp/: in_plugin.cpp  in_plugin.h  music.cpp  music.h  out_plugin.cpp  out_plugin.h  plugin.cpp  plugin.h  winamp.cpp  winamp.h
src/audio/winamp/include/: winamp.h
src/ff7/: animations.cpp  animations.h  battle.cpp  blend.cpp  blend.h  camera.cpp  camera.h  defs.h  dsound.cpp  field.cpp  file.cpp  graphics.cpp  japanese_text.cpp  kernel.cpp  loaders.cpp  menu.cpp  minigames.cpp  misc.cpp  time.cpp  time.h  widescreen.cpp  widescreen.h  world.cpp
src/ff7/battle/: animations.cpp  animations.h  battle.cpp  camera.cpp  camera.h  defs.h  effect.cpp  effect.h  menu.cpp  menu.h
src/ff7/field/: background.cpp  background.h  camera.cpp  camera.h  defs.h  enter.h  field.cpp  model.cpp  model.h  opcode.cpp  opcode.h  utils.h
src/ff7/world/: camera.cpp  camera.h  defs.h  player.cpp  renderer.cpp  renderer.h  utils.h  world.cpp  world.h
src/ff7music/: music.cpp  music.h
src/ff8/: ambient.cpp  ambient.h  engine.cpp  engine.h  file.cpp  file.h  fonts.cpp  fonts.h  mod.cpp  mod.h  movies.cpp  movies.h  remaster.cpp  remaster.h  save_data.h  texture_packer.cpp  texture_packer.h  uv_patch copy.cpp.disabled  uv_patch.cpp  uv_patch.h  vibration.cpp  vibration.h  vram.cpp  vram.h  zzz_archive.cpp  zzz_archive.h
src/ff8/battle/: effects.h  stage.cpp  stage.h
src/ff8/field/: background.cpp  background.h  chara_one.cpp  chara_one.h
src/ff8/world/: chara_one.cpp  chara_one.h  wmset.cpp  wmset.h
src/ffmpeg/: movies.cpp  movies.h
src/ffmpeg_movies/: ffmpeg_movies.cpp  ffmpeg_movies.h
src/gl/: deferred.cpp  gl.cpp  special_case.cpp  texture.cpp
src/image/: image.cpp  image.h  tim.cpp  tim.h
src/imgui_club/: imgui_memory_editor.h
src/vgmstream/: music.cpp  music.h
src/vgmstream_music/: music.cpp
src/video/: movies.cpp  movies.h
src/winamp/: in_vgmstream.cpp  in_vgmstream.h  music.cpp  music.h  out_directsound.cpp  out_directsound.h  plugin.cpp  plugin.h  winamp.h  winamp_ext.h
(+80 files in other folders)
